--- a/my-first-electron-app/index.html
+++ b/my-first-electron-app/index.html
@@ -7,9 +7,10 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
-<body>
-    <h1>Hello World!</h1>
+<body style="background-color: yellow;">
+    <h1 style="color:red;">Hello World!</h1>
     We are using node
+    <h2 style="color:green;">welcome to electron</h2>
     <script>
         document.write(process.versions.node)
     </script>, Chrome
