--- a/new/index.html
+++ b/new/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
-<body style="background-color:grey;">
+<body style="background-color:violet;">
     <h1 style="color:blueviolet;">Hello World!</h1>
     We are using node
     <h2 style="color:green;">welcome to electron</h2>
